drm/radeon/kms: release AGP bridge at suspend

commit 10b06122afcc78468bd1d009633cb71e528acdc5 upstream.

I think it's good to release the AGP bridge at suspend
and reacquire it at resume. Also fix :
https://bugzilla.kernel.org/show_bug.cgi?id=15969

Signed-off-by: Jerome Glisse <jglisse@redhat.com>
Signed-off-by: Dave Airlie <airlied@redhat.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@suse.de>
(cherry-picked from commit 9f819608412a8195c82ea8fb94b5755346f1b4ac 2.6.34.1)
Signed-off-by: Steve Conklin <sconklin@canonical.com>
Signed-off-by: Stefan Bader <stefan.bader@canonical.com>